--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -88,6 +88,8 @@ workflows:
             branches:
               ignore: master
       - apply-ms:
+          requires:
+            - plan-ms
           filters:
             branches:
               # only: master
@@ -97,6 +99,8 @@ workflows:
             branches:
               ignore: master
       - apply-pl:
+          requires:
+            - plan-pl
           filters:
             branches:
               # only: master
