--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,6 +18,12 @@ install-tfnotify: &install-tfnotify
     cp tfnotify_v0.3.0_linux_amd64/tfnotify /usr/local/bin/tfnotify
     rm -rf tfnotify_v0.3.0_linux_amd64.tar.gz tfnotify_v0.3.0_linux_amd64
 
+setup-gcloud-gke: &setup-gcloud-gke
+  name: Setup kubeconfig
+  command: |
+    gcloud container clusters get-credentials manchester --zone="asia-northeast1-b" --project="msmini-manchester"
+    mv $HOME/.kube/config /msmini/kubeconfig
+
 version: 2
 jobs:
   plan-ms:
@@ -44,6 +50,8 @@ jobs:
           <<: *install-tfnotify
       - run:
           <<: *prepare-gcp-service-account-json
+      - run:
+          <<: *setup-gcloud-gke
       - run:
           name: Run apply
           command: |
@@ -73,6 +81,8 @@ jobs:
           <<: *install-tfnotify
       - run:
           <<: *prepare-gcp-service-account-json
+      - run:
+          <<: *setup-gcloud-gke
       - run:
           name: Run apply
           command: |
