--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,13 +13,13 @@ prepare-gcp-service-account-json: &prepare-gcp-service-account-json
 setup: &setup
   name: Setup
   command: |
-    apt -qy update && apt install -y wget
+    apt -qy update && apt install -y wget unzip
 
 install-terraform: &install-terraform
   name: Install terraform
   command: |
     wget https://releases.hashicorp.com/terraform/0.11.13/terraform_0.11.13_linux_amd64.zip
-    tar zxvf terraform_0.11.13_linux_amd64.zip
+    unzip terraform_0.11.13_linux_amd64.zip
     cp terraform /usr/local/bin/terraform
     rm -rf terraform_0.11.13_linux_amd64.zip terraform
 
