--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,6 +42,7 @@ setup-gcloud-gke: &setup-gcloud-gke
   name: Setup kubeconfig
   command: |
     gcloud container clusters get-credentials manchester --zone="asia-northeast1-b" --project="msmini-manchester"
+    mkdir /msmini
     mv $HOME/.kube/config /msmini/kubeconfig
 
 version: 2
